# rust-api

./: .gitignore  Cargo.toml  README.md
migrations/2021-08-05-051509_create_users/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
