[package]
name = "nas-controller"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# rusqlite = { version = "0.29.0", features = ["bundled"] }

[dependencies]
chrono = "0.4.19"
diesel = { version = "2", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
serde = { version = "1.0.127", features = ["derive"] }
serde_derive = "1.0.127"
serde_json = "1.0.66"
axum = "0.6.18"
deadpool-diesel = { version = "0.4.1", features = ["sqlite", "serde"] }
axum-macros = "0.3.7"
